--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.0.0",
+    "lucide-react": "^0.563.0",
     "next": "14.2.35",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
